fix checkbox alignment

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_rta.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_rta.scss
@@ -104,9 +104,9 @@
 }
 
 .rta-site-name-label {
-	width: 20px;
-	height: 20px;
-	display:block!important;
+	width: 20px !important;
+	height: 20px !important;
+	display:block !important;
 }
 /////////End of Sites & teams///////////////
 ///////////rta-skills///////////////////////
